# depmap-downloader-rs

./: .gitignore  Cargo.toml  DATABASE_FIX.md  LICENSE  README.md  USAGE.md  depmap-api-deepresearch.md  depmapdown.py  main.py  pyproject.toml  readme_zh.md  simple_test.py
refdata/: Gene Dependency Profile Summary.csv  datasets.json  downloads.csv  readme.txt
src/: cache_manager.rs  cli.rs  commands.rs  database.rs  downloader.rs  error.rs  main.rs  models.rs
